# grpc-go-angular

grpc-proto/auth/: auth.proto
grpc-proto/movie/: movie.proto
grpc-proto/user/: user.proto
package/backend/: Makefile
package/backend/auth-service/: .env  Makefile  dev.yaml  generate.sh  go.mod  go.sum
package/backend/auth-service/client/: client.go
package/backend/auth-service/cmd/: main.go
package/backend/auth-service/docker/: Dockerfile
package/backend/docker/: docker-compose.yml
package/backend/docker/envoy/: envoy.json
package/backend/movie-service/: Cargo.toml  Makefile  build.rs
package/backend/movie-service/client/: client.rs
package/backend/movie-service/docker/: Dockerfile  docker-compose.yaml
package/backend/movie-service/src/: main.rs  schema.rs
package/backend/movie-service/src/controller/: controller.rs
package/backend/movie-service/src/grpc_proto/: .gitignore  mod.rs
package/backend/movie-service/src/models/: movie.rs
package/backend/movie-service/src/services/: manager.rs  mod.rs  movie.rs  movie_service.rs  services.rs
package/backend/movie-service/src/store/: mod.rs  movie_repo.rs  pool.rs  repository.rs  store.rs
package/backend/movie-service/src/store/pg/: mod.rs  movie_repo.rs  pool.rs  user_repo.rs
package/backend/user-service/: .env  .gitignore  Makefile  dev.yaml  generate.sh  go.mod  go.sum
package/frontend/: .gitignore  capacitor.config.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tslint.json
package/frontend/e2e/src/: app.po.ts
package/frontend/src/: polyfills.ts  test.ts
(+77 files in other folders)
