[package]
name = "movie-service"
version = "0.1.0"
authors = ["vizitiuRoman <romanv@readcast.net>"]
edition = "2018"

[[bin]]
name = "client"
path = "client/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
protobuf = "2.18.1"
grpc = "0.8.2"
grpc-protobuf = "0.8.2"
sqlx = { version = "0.4.1", features = ["postgres", "runtime-async-std-native-tls"] }
futures = "0.3.8"
async-std = { version = "1.6", features = ["attributes"] }
dotenv = "0.15.0"
easy-http-request = "0.2.9"

[build-dependencies]
protoc-rust-grpc = "0.8.2"
